Created a canvas for the start screen
Problems with changing scenes while pressing button

--- a/Examen/Assembly-CSharp.csproj
+++ b/Examen/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Assets/Scripts/CarController.cs" />
     <Compile Include="Assets/Scripts/GameManager.cs" />
     <Compile Include="Assets/Scripts/CameraFollow.cs" />
+    <Compile Include="Assets/Scripts/MainMenu.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets/TextMesh Pro/Shaders/TMPro.cginc" />
